# UraniumTL

./: CMakeLists.txt  CMakePresets.json  README.md
Samples/: CMakeLists.txt
Samples/FilesSample/: CMakeLists.txt  main.cpp
UraniumTL/: CMakeLists.txt
UraniumTL/Tests/: CMakeLists.txt
UraniumTL/Tests/Buffers/: ArrayPool.cpp
UraniumTL/Tests/Containers/: List.cpp
UraniumTL/Tests/RTTI/: RTTI.cpp
UraniumTL/Tests/Strings/: Format.cpp  String.cpp
UraniumTL/Tests/Utils/: UUID.cpp
UraniumTL/UnTL/Base/: Base.h  Byte.h  Flags.h  Platform.h
UraniumTL/UnTL/Buffers/: ArrayPool.h
UraniumTL/UnTL/Buffers/Internal/: PoolBucket.h
UraniumTL/UnTL/Containers/: ArraySlice.h  HeapArray.h  List.h
UraniumTL/UnTL/IO/: BaseIO.cpp  BaseIO.h  FileHandle.cpp  FileHandle.h  FileStream.cpp  FileStream.h  IStream.h  StdoutStream.cpp  StdoutStream.h  StreamBase.h
UraniumTL/UnTL/Memory/: IAllocator.h  Memory.h  Object.h  Ptr.h  ReferenceCounter.h  SystemAllocator.h
UraniumTL/UnTL/RTTI/: RTTI.h
UraniumTL/UnTL/Strings/: Format.cpp  Format.h  String.h  StringSlice.cpp  StringSlice.h  Unicode.h
UraniumTL/UnTL/Time/: DateTime.cpp  DateTime.h  TimeSpan.h
UraniumTL/UnTL/Utils/: BitUtils.h  Result.h  UUID.cpp  UUID.h
cmake/: Config.cmake
